tests/should-not-compile/assign-null-to-bool-variable.talc
b:bool = true;
// EXPECTED ERROR: type null-type cannot be assigned to variable "b" of type bool
b = null;
